src/core-crm/objects/Communication_Queue_Configuration__mdt/Communication_Queue_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>To set a maximum retry on the email</description>
    <label>Communication Queue Configuration</label>
    <pluralLabel>Communication Queue Configurations</pluralLabel>
</CustomObject>