src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/Automation_Username__c.field-meta.xml
<CustomField>
    <fullName>Automation_Username__c</fullName>
    <label>Automation Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>