src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/Maximum_Daily_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Daily_Email_Count__c</fullName>
    <label>Maximum Daily Email Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>