src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/SMS_Messaging_Channel__c.field-meta.xml
<CustomField>
    <fullName>SMS_Messaging_Channel__c</fullName>
    <label>SMS Messaging Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>