src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/SMS_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>SMS_Retry_Count__c</fullName>
    <label>SMS Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>