src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/SMS_Send_Hours_End__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_Hours_End__c</fullName>
    <label>SMS Send Hours End</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>