src/core-crm/objects/Communication_Queue_Configuration__mdt/fields/Supress_SMS__c.field-meta.xml
<CustomField>
    <fullName>Supress_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the field is set to truth, the processing of the queue records for SMS should NOT HAPPEN. In that case, the batch job should ignore the execution of all the SMS sending.</description>
    <label>Supress SMS</label>
    <type>Checkbox</type>
</CustomField>